--- a/distribution.html
+++ b/distribution.html
@@ -4,120 +4,157 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>خطة التوزيع - روابي بلادنا</title>
-    <link rel="stylesheet" href="styles/main.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&family=Noto+Naskh+Arabic:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="styles/distribution.css" />
   </head>
   <body>
     <header class="header">
-      <nav class="nav">
-        <div class="logo">
-          <h1>روابي بلادنا</h1>
-        </div>
-        <div class="nav-links">
-          <a href="index.html">الرئيسية</a>
-          <a href="about.html">عن المصنع</a>
-          <a href="products.html">المنتجات</a>
-          <a href="distribution.html" class="active">خطة التوزيع</a>
-          <a href="quality.html">الجودة والاستدامة</a>
-          <a href="target-groups.html">الفئات المستهدفة</a>
-          <a href="contact.html">اتصل بنا</a>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="#">روابي بلادنا</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">الرئيسية</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">عن المصنع</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="products.html">المنتجات</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="distribution.html">خطة التوزيع</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="quality.html">الجودة والاستدامة</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="target-groups.html"
+                  >الفئات المستهدفة</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">اتصل بنا</a>
+              </li>
+            </ul>
+          </div>
         </div>
       </nav>
     </header>
 
     <main>
-      <!-- قسم البطل -->
       <section class="distribution-hero">
-        <div class="distribution-hero-content">
-          <h1>خطة التوزيع</h1>
-          <p>نصل إلى جميع مناطق المملكة بخدمة توزيع متميزة وسريعة</p>
+        <div class="container">
+          <div class="distribution-hero-content text-center">
+            <h1 class="mb-4">خطة التوزيع</h1>
+            <p class="mb-5">
+              نصل إلى جميع مناطق المملكة بخدمة توزيع متميزة وسريعة
+            </p>
+          </div>
         </div>
       </section>
 
-      <!-- مناطق التوزيع -->
-      <section class="distribution-regions">
+      <section class="distribution-regions py-5">
         <div class="container">
-          <h2 class="section-title">مناطق التغطية</h2>
-          <div class="regions-grid">
-            <div class="region-card">
-
-              <div class="region-icon">🏰</div>
-
-              <div class="region-icon">🏰️</div>
-
-              <h3>المنطقة الوسطى</h3>
-              <ul class="region-cities">
-                <li>الرياض</li>
-                <li>القصيم</li>
-                <li>حائل</li>
-              </ul>
+          <h2 class="section-title text-center mb-5">مناطق التغطية</h2>
+          <div class="row">
+            <div class="col-md-6 col-lg-3 mb-4">
+              <div class="region-card">
+                <div class="region-icon">🏰</div>
+                <h3>المنطقة الوسطى</h3>
+                <ul class="region-cities">
+                  <li>الرياض</li>
+                  <li>القصيم</li>
+                  <li>حائل</li>
+                </ul>
+              </div>
             </div>
 
-            <div class="region-card">
-              <div class="region-icon">🌅</div>
-              <h3>المنطقة الشرقية</h3>
-              <ul class="region-cities">
-                <li>الدمام</li>
-                <li>الخبر</li>
-                <li>الأحساء</li>
-              </ul>
+            <div class="col-md-6 col-lg-3 mb-4">
+              <div class="region-card">
+                <div class="region-icon">🌅</div>
+                <h3>المنطقة الشرقية</h3>
+                <ul class="region-cities">
+                  <li>الدمام</li>
+                  <li>الخبر</li>
+                  <li>الأحساء</li>
+                </ul>
+              </div>
             </div>
 
-            <div class="region-card">
-
-              <div class="region-icon">⛰️</div>
-
-              <div class="region-icon">🕌</div>
-
-              <h3>المنطقة الغربية</h3>
-              <ul class="region-cities">
-                <li>جدة</li>
-                <li>مكة المكرمة</li>
-                <li>المدينة المنورة</li>
-              </ul>
+            <div class="col-md-6 col-lg-3 mb-4">
+              <div class="region-card">
+                <div class="region-icon">⛰️</div>
+                <h3>المنطقة الغربية</h3>
+                <ul class="region-cities">
+                  <li>جدة</li>
+                  <li>مكة المكرمة</li>
+                  <li>المدينة المنورة</li>
+                </ul>
+              </div>
             </div>
 
-            <div class="region-card">
-
-              <div class="region-icon">🌄</div>
-
-              <div class="region-icon">⛰️</div>
-
-              <h3>المنطقة الجنوبية</h3>
-              <ul class="region-cities">
-                <li>أبها</li>
-                <li>خميس مشيط</li>
-                <li>جازان</li>
-              </ul>
+            <div class="col-md-6 col-lg-3 mb-4">
+              <div class="region-card">
+                <div class="region-icon">🌄</div>
+                <h3>المنطقة الجنوبية</h3>
+                <ul class="region-cities">
+                  <li>أبها</li>
+                  <li>خميس مشيط</li>
+                  <li>جازان</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
       </section>
 
-      <!-- مميزات خدمة التوزيع -->
-      <section class="distribution-features">
+      <section class="distribution-features py-5 bg-light">
         <div class="container">
-          <h2 class="section-title">مميزات خدمة التوزيع</h2>
-          <div class="features-grid">
-            <div class="feature-card">
-              <div class="feature-icon">🚚</div>
-              <h3>توصيل سريع</h3>
-              <p>خدمة توصيل في نفس اليوم للطلبات العاجلة</p>
+          <h2 class="section-title text-center mb-5">مميزات خدمة التوزيع</h2>
+          <div class="row">
+            <div class="col-md-4 mb-4">
+              <div class="feature-card">
+                <div class="feature-icon">🚚</div>
+                <h3>توصيل سريع</h3>
+                <p>خدمة توصيل في نفس اليوم للطلبات العاجلة</p>
+              </div>
             </div>
 
-            <div class="feature-card">
-              <div class="feature-icon">❄️</div>
-              <h3>سلسلة تبريد متكاملة</h3>
-              <p>نضمن جودة المنتجات خلال النقل والتخزين</p>
+            <div class="col-md-4 mb-4">
+              <div class="feature-card">
+                <div class="feature-icon">❄️</div>
+                <h3>سلسلة تبريد متكاملة</h3>
+                <p>نضمن جودة المنتجات خلال النقل والتخزين</p>
+              </div>
             </div>
 
-            <div class="feature-card">
-              <div class="feature-icon">💯</div>
-              <h3>ضمان الجودة</h3>
-              <p>نضمن وصول منتجاتنا بأفضل حالة</p>
+            <div class="col-md-4 mb-4">
+              <div class="feature-card">
+                <div class="feature-icon">💯</div>
+                <h3>ضمان الجودة</h3>
+                <p>نضمن وصول منتجاتنا بأفضل حالة</p>
+              </div>
             </div>
           </div>
         </div>
@@ -125,23 +162,37 @@
     </main>
 
     <footer class="footer">
-      <div class="footer-content">
-        <div class="footer-info">
-          <h3>روابي بلادنا</h3>
-          <p>نجمع التقليدية في كل منتجاتنا</p>
-        </div>
-        <div class="footer-links">
-          <h3>روابط سريعة</h3>
-          <a href="about.html">عن المصنع</a>
-          <a href="products.html">المنتجات</a>
-          <a href="contact.html">اتصل بنا</a>
-        </div>
-        <div class="footer-contact">
-          <h3>تواصل معنا</h3>
-          <p>هاتف: 0096656518XXXX</p>
-          <p>البريد الإلكتروني: info@rawabi-bladna.com</p>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="footer-brand">
+              <h2>روابي بلادنا</h2>
+              <p>نكهة الطبيعة في كل منتجاتنا</p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="footer-links">
+              <h3>روابط سريعة</h3>
+              <ul class="list-unstyled">
+                <li><a href="about.html">عن المصنع</a></li>
+                <li><a href="products.html">المنتجات</a></li>
+                <li><a href="contact.html">اتصل بنا</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="footer-contact">
+              <h3>تواصل معنا</h3>
+              <p>هاتف: 0096656518XXXX</p>
+              <p>البريد الإلكتروني: info@rawabi-bladna.com</p>
+            </div>
+          </div>
         </div>
       </div>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </body>
 </html>
